--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AAD": {
+    "ResourceId": "api://ed7a94c0-0225-4d0e-ac4a-e8cd5bb11ca1",
+    "InstanceId": "https://login.microsoftonline.com/",
+    "TenantId": "8fc11775-4bfa-4017-8c8d-b3cb2b41ba5d"
+  }
 }
